samples/_failures_safe/1761165456_cc6d96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35763928.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_35763928.c:153:13: error: expected declaration or statement at end of input
  153 |             strncpy(token.value, buffer, MAX_TOKEN_LEN - 1);
      |             ^~~~~~~
./samples/SAFE/__tmp_35763928.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35763928.c:153:13: error: expected declaration or statement at end of input
